fix overflow header

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -45,6 +45,7 @@
           .loginOption {
             display: flex;
             position: absolute;
+            z-index: 999 !important;
           }
         }
         a:hover {
